feat(backend): support email and ticket credential api
