# backend/openapi/api.go
@@ -24,10 +24,14 @@ type DefaultAPIRouter interface {
 	EventsEventIdGet(http.ResponseWriter, *http.Request)
 	EventsGet(http.ResponseWriter, *http.Request)
 	HealthGet(http.ResponseWriter, *http.Request)
-	UsersLoginPost(http.ResponseWriter, *http.Request)
-	UsersMeGet(http.ResponseWriter, *http.Request)
-	UsersRequestVerificationCodePost(http.ResponseWriter, *http.Request)
-	UsersUpdatePut(http.ResponseWriter, *http.Request)
+	UserLoginPost(http.ResponseWriter, *http.Request)
+	UserMeEmailCredentialGet(http.ResponseWriter, *http.Request)
+	UserMeEmailCredentialPut(http.ResponseWriter, *http.Request)
+	UserMeGet(http.ResponseWriter, *http.Request)
+	UserMeRequestEmailCredentialPost(http.ResponseWriter, *http.Request)
+	UserMeTicketCredentialsGet(http.ResponseWriter, *http.Request)
+	UserRequestVerificationCodePost(http.ResponseWriter, *http.Request)
+	UserUpdatePut(http.ResponseWriter, *http.Request)
 }
 
 
@@ -39,8 +43,12 @@ type DefaultAPIServicer interface {
 	EventsEventIdGet(context.Context, string) (ImplResponse, error)
 	EventsGet(context.Context) (ImplResponse, error)
 	HealthGet(context.Context) (ImplResponse, error)
-	UsersLoginPost(context.Context, UserLogin) (ImplResponse, error)
-	UsersMeGet(context.Context) (ImplResponse, error)
-	UsersRequestVerificationCodePost(context.Context, UserEmailVerificationRequest) (ImplResponse, error)
-	UsersUpdatePut(context.Context, UserUpdate) (ImplResponse, error)
+	UserLoginPost(context.Context, UserLogin) (ImplResponse, error)
+	UserMeEmailCredentialGet(context.Context) (ImplResponse, error)
+	UserMeEmailCredentialPut(context.Context, PutEmailCredentialRequest) (ImplResponse, error)
+	UserMeGet(context.Context) (ImplResponse, error)
+	UserMeRequestEmailCredentialPost(context.Context) (ImplResponse, error)
+	UserMeTicketCredentialsGet(context.Context) (ImplResponse, error)
+	UserRequestVerificationCodePost(context.Context, UserEmailVerificationRequest) (ImplResponse, error)
+	UserUpdatePut(context.Context, UserUpdate) (ImplResponse, error)
 }
