# backend/openapi/model_email_credential.go
@@ -1,0 +1,41 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * ZK Ticketing API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.0.1
+ */
+
+package openapi
+
+
+import (
+	"time"
+)
+
+
+
+type EmailCredential struct {
+
+	Id string `json:"id,omitempty"`
+
+	IdentityCommitment string `json:"identity_commitment,omitempty"`
+
+	Data string `json:"data,omitempty"`
+
+	IssuedAt time.Time `json:"issued_at,omitempty"`
+
+	ExpireAt time.Time `json:"expire_at,omitempty"`
+}
+
+// AssertEmailCredentialRequired checks if the required fields are not zero-ed
+func AssertEmailCredentialRequired(obj EmailCredential) error {
+	return nil
+}
+
+// AssertEmailCredentialConstraints checks if the values respects the defined constraints
+func AssertEmailCredentialConstraints(obj EmailCredential) error {
+	return nil
+}
