# backend/repos/email_credentials/models.go
@@ -1,0 +1,17 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.26.0
+
+package email_credentials
+
+import (
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type EmailCredential struct {
+	ID                 string
+	IdentityCommitment string
+	Data               string
+	IssuedAt           pgtype.Timestamptz
+	ExpireAt           pgtype.Timestamptz
+}
