# backend/server/middleware.go
@@ -32,8 +32,8 @@ func authMiddleware(h http.Handler, jwtService *jwt.Service) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		// Skip authentication for health check and preflight requests
 		if r.URL.Path == "/api/v1/health" ||
-			r.URL.Path == "/api/v1/users/login" ||
-			r.URL.Path == "/api/v1/users/request-verification-code" ||
+			r.URL.Path == "/api/v1/user/login" ||
+			r.URL.Path == "/api/v1/user/request-verification-code" ||
 			r.URL.Path == "/api/v1/events" ||
 			r.Method == http.MethodOptions {
 			h.ServeHTTP(w, r)
